Fix CSS layout issue

--- a/app/components/notifications/Notifications.css
+++ b/app/components/notifications/Notifications.css
@@ -1,3 +1,3 @@
 .wrap {
-  composes: container from "css/layout.css";
+  width: 100%;
 }
